package observer;

import subject.SensorAsync;


/**
 * Observer interface
 *
 * @author Orgeval Thomas & Bourgeois Bastien
 */
public interface ObserverAsync extends Observer<SensorAsync> {
}
